[project]
name = "adk-agent-doc-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-adk>=0.5.0",
    "langchain-openai>=0.3.17",
    "langchain>=0.3.25",
    "langgraph>=0.4.5",
    "litellm>=1.70.0",
    "networkx>=3.4.2",
    "mypy>=1.15.0",
    "pyvis>=0.3.2",
]
